web-infras/parser/tests/fixtures/babel/es2016/simple-parameter-list/generator-method/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (3,5)
3|    "use strict";
 |   ^
